--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "pnpm run db:generate && next dev",
+    "build": "pnpm run db:generate && next build",
     "start": "next start",
     "lint": "next lint",
     "db:generate": "prisma generate --schema=./src/prisma/schema.prisma"
@@ -111,6 +111,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "prisma": "^5.13.0",
+    "prisma-erd-generator": "^1.11.2",
+    "prisma-kysely": "^1.8.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
